Limitações para TextField - interface Initialize