@@ -1,7 +1,13 @@
 # javafx-eclipse
-Projeto JavaFX no Eclipse
+### Projeto JavaFX no Eclipse utilizando Scene Builder
 
-## JavaFX
-## Eclipse
-## SceneBuilder
+- JavaFX
+- Eclipse
+- SceneBuilder
 
+## Configuração do build para rodar a aplicação no Eclipse:
+Botão direito no projeto -> Run As -> Run Configurations -> Arguments -> VM Arguments
+
+Copiar o conteúdo abaixo, adaptando para sua pasta:
+
+--module-path C:\java-libs\javafx-sdk\lib --add-modules=javafx.fxml,javafx.controls
